--- a/requirements.txt
+++ b/requirements.txt
@@ -1,177 +1,11 @@
-annotated-types==0.7.0
-anyio==4.6.2.post1
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asteval==1.0.5
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-Brotli==1.1.0
-cached-property==2.0.1
-certifi==2024.8.30
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.1
-cycler==0.12.1
-debugpy==1.8.8
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.8
-dj-database-url==2.3.0
 Django==5.1.6
 django-unfold==0.41.0
-docopt==0.6.2
-eight==1.0.1
-et_xmlfile==2.0.0
-executing==2.1.0
-fasteners==0.19
-fastjsonschema==2.20.0
-filelock==3.15.4
-flexcache==0.3
-flexparser==0.4
-fonttools==4.55.0
-fqdn==1.5.1
-future==0.18.3
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.6
-httpx==0.27.2
-idna==3.10
-ijson==3.3.0
-inflate64==1.0.0
-ipykernel==6.29.5
-ipython==8.29.0
-isodate==0.7.2
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.28
-jsonlines==4.0.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.7
-linear-tsv==1.1.0
-llvmlite==0.43.0
-lxml==5.3.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mistune==3.0.2
-multivolumefile==0.2.3
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.2.2
-notebook_shim==0.2.4
-numba==0.60.0
-numpy==1.26.4
-openpyxl==3.1.5
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-peewee==3.17.8
-pillow==10.4.0
-Pint==0.24.4
-platformdirs==4.2.2
-prettytable==3.12.0
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-psutil==6.1.0
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-py7zr==0.22.0
-pybcj==1.0.2
-pycparser==2.22
-pycryptodomex==3.21.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyecospold==4.0.0
-Pygments==2.18.0
-pyparsing==3.2.0
-pyppmd==1.1.0
-PyPrind==2.11.3
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-pytz==2024.2
-pywin32==308
-pywinpty==2.0.14
-pyxlsb==1.0.10
-PyYAML==6.0.2
-pyzmq==26.2.0
-pyzstd==0.16.2
-referencing==0.35.1
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986==2.0.0
-rfc3986-validator==0.1.1
-rpds-py==0.21.0
-scikit-learn==1.6.1
-scipy==1.14.1
-Send2Trash==1.8.3
-setuptools==75.5.0
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-sparse==0.15.4
-SQLAlchemy==2.0.36
-sqlparse==0.5.1
-stack-data==0.6.3
-stats_arrays==0.7
-terminado==0.18.1
-texttable==1.7.0
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-toolz==1.0.0
-tornado==6.4.1
-tqdm==4.67.0
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.12.2
-tzdata==2024.2
-unicodecsv==0.14.1
-Unidecode==1.3.8
-uri-template==1.3.0
-urllib3==2.2.3
-virtualenv==20.26.3
-virtualenvwrapper-win==1.2.7
-voluptuous==0.15.2
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-wheel==0.45.0
+dj-database-url==2.3.0
+gunicorn==21.2.0
 whitenoise==6.9.0
-Whoosh==2.7.4
-wrapt==1.16.0
-xlrd==2.0.1
-XlsxWriter==3.2.0
-
-gunicorn
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
+numpy==1.26.4
+pandas==2.2.3
+scikit-learn==1.6.1
+joblib==1.4.2
